--- a/package.json
+++ b/package.json
@@ -23,5 +23,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
+  },
+  "dependencies": {
+    "chalk": "^5.4.1",
+    "execa": "^9.6.0",
+    "inquirer": "^12.8.2",
+    "ora": "^8.2.0"
   }
 }
