--- a/package.json
+++ b/package.json
@@ -1,33 +1,42 @@
 {
-  "name": "fabr",
-  "version": "0.0.1-alpha.0",
-  "description": "A command line utility for scaffolding new development projects ",
-  "keywords": [
-    "scaffold",
-    "starter",
-    "template",
-    "bootstrap",
-    "fabr"
-  ],
-  "homepage": "https://github.com/yashjawale/fabr#readme",
-  "bugs": {
-    "url": "https://github.com/yashjawale/fabr/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/yashjawale/fabr.git"
-  },
-  "license": "GPL-3.0-or-later",
-  "author": "Yash Jawale",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "chalk": "^5.4.1",
-    "execa": "^9.6.0",
-    "inquirer": "^12.8.2",
-    "ora": "^8.2.0"
-  }
+	"name": "fabr",
+	"version": "0.0.1-alpha.0",
+	"description": "A command line utility for scaffolding new development projects ",
+	"keywords": [
+		"scaffold",
+		"starter",
+		"template",
+		"bootstrap",
+		"fabr"
+	],
+	"homepage": "https://github.com/yashjawale/fabr#readme",
+	"bugs": {
+		"url": "https://github.com/yashjawale/fabr/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/yashjawale/fabr.git"
+	},
+	"license": "GPL-3.0-or-later",
+	"author": "Yash Jawale",
+	"type": "module",
+	"main": "index.js",
+	"scripts": {
+		"build": "tsc",
+		"start": "npm run build && node dist/index.js",
+		"dev": "tsx watch src/index.ts"
+	},
+	"dependencies": {
+		"chalk": "^5.4.1",
+		"execa": "^9.6.0",
+		"inquirer": "^12.8.2",
+		"ora": "^8.2.0"
+	},
+	"devDependencies": {
+		"@types/inquirer": "^9.0.8",
+		"@types/node": "^24.1.0",
+		"ts-node-dev": "^2.0.0",
+		"tsx": "^4.20.3",
+		"typescript": "^5.8.3"
+	}
 }
