--- a/package.json
+++ b/package.json
@@ -27,13 +27,12 @@
 		"dev": "tsx watch src/index.ts"
 	},
 	"dependencies": {
+		"@inquirer/prompts": "^7.8.0",
 		"chalk": "^5.4.1",
 		"execa": "^9.6.0",
-		"inquirer": "^12.8.2",
 		"ora": "^8.2.0"
 	},
 	"devDependencies": {
-		"@types/inquirer": "^9.0.8",
 		"@types/node": "^24.1.0",
 		"ts-node-dev": "^2.0.0",
 		"tsx": "^4.20.3",
