--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
 	"scripts": {
 		"build": "tsc",
 		"start": "npm run build && node dist/index.js",
-		"dev": "tsx watch src/index.ts"
+		"dev": "tsx watch src/index.ts",
+		"lint": "eslint src/**/*.ts",
+		"lint:fix": "eslint src/**/*.ts --fix"
 	},
 	"dependencies": {
 		"@inquirer/prompts": "^7.8.0",
 		"chalk": "^5.4.1",
 		"execa": "^9.6.0",
-		"ora": "^8.2.0"
+		"ora": "^8.2.0",
+		"typescript-eslint": "^8.39.0"
 	},
 	"devDependencies": {
 		"@types/node": "^24.1.0",
