--- a/website/package.json
+++ b/website/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.35.2",
+    "@astrojs/starlight-tailwind": "^4.0.1",
     "@fontsource/amaranth": "^5.2.6",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.12.8",
