--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
 		"start": "npm run build && node dist/index.js",
 		"dev": "tsx watch src/index.ts",
 		"lint": "eslint src/**/*.ts",
-		"lint:fix": "eslint src/**/*.ts --fix"
+		"lint:fix": "eslint src/**/*.ts --fix",
+		"format": "prettier --write .",
+		"format:check": "prettier --check .",
+		"typecheck": "tsc --noEmit",
+		"ci": "npm run lint && npm run format:check && npm run typecheck && npm run build"
 	},
 	"dependencies": {
 		"@inquirer/prompts": "^7.8.0",
@@ -36,7 +40,11 @@
 		"typescript-eslint": "^8.39.0"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.17.0",
 		"@types/node": "^24.1.0",
+		"eslint": "^9.17.0",
+		"eslint-config-prettier": "^10.1.8",
+		"prettier": "^3.4.2",
 		"ts-node-dev": "^2.0.0",
 		"tsx": "^4.20.3",
 		"typescript": "^5.8.3"
