--- a/website/package.json
+++ b/website/package.json
@@ -1,19 +1,37 @@
 {
-  "name": "website",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/starlight": "^0.35.2",
-    "@astrojs/starlight-tailwind": "^4.0.1",
-    "@fontsource/amaranth": "^5.2.6",
-    "@tailwindcss/vite": "^4.1.11",
-    "astro": "^5.12.8",
-    "tailwindcss": "^4.1.11"
-  }
+	"name": "website",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro",
+		"lint": "eslint src --ext .js,.jsx,.ts,.tsx,.astro",
+		"lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx,.astro --fix",
+		"format": "prettier --write .",
+		"format:check": "prettier --check .",
+		"typecheck": "astro check",
+		"ci": "npm run lint && npm run format:check && npm run typecheck && npm run build"
+	},
+	"dependencies": {
+		"@astrojs/starlight": "^0.35.2",
+		"@astrojs/starlight-tailwind": "^4.0.1",
+		"@fontsource/amaranth": "^5.2.6",
+		"@tailwindcss/vite": "^4.1.11",
+		"astro": "^5.12.8",
+		"tailwindcss": "^4.1.11"
+	},
+	"devDependencies": {
+		"@astrojs/check": "^0.9.4",
+		"@eslint/js": "^9.17.0",
+		"@typescript-eslint/eslint-plugin": "^8.17.0",
+		"@typescript-eslint/parser": "^8.17.0",
+		"eslint": "^9.17.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-astro": "^1.3.1",
+		"prettier": "^3.4.2",
+		"prettier-plugin-astro": "^0.14.1",
+		"typescript": "^5.9.2"
+	}
 }
