--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
 		"typecheck": "tsc --noEmit",
-		"ci": "npm run lint && npm run format:check && npm run typecheck && npm run build"
+		"ci": "npm run lint && npm run format:check && npm run typecheck && npm run build",
+		"docs:api": "mkdir -p website/src/content/docs/developer/generated && jsdoc2md 'src/lib/*.js' 'src/types/*.js' --template docs-template.hbs > website/src/content/docs/developer/generated/api.md",
+		"docs:build": "npm run docs:api && cd website && npm run build"
 	},
 	"dependencies": {
 		"@inquirer/prompts": "^7.8.0",
@@ -44,9 +46,10 @@
 		"@types/node": "^24.1.0",
 		"eslint": "^9.17.0",
 		"eslint-config-prettier": "^10.1.8",
+		"jsdoc-to-markdown": "^9.0.3",
 		"prettier": "^3.4.2",
 		"ts-node-dev": "^2.0.0",
 		"tsx": "^4.20.3",
-		"typescript": "^5.8.3"
+		"typescript": "^5.6.0"
 	}
 }
