--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
 		"typecheck": "tsc --noEmit",
-		"ci": "npm run lint && npm run format:check && npm run typecheck && npm run build",
-		"docs:api": "npm run build && mkdir -p website/src/content/docs/docs/developer/api && npx typedoc && ./scripts/add-api-titles.sh",
-		"docs:build": "npm run docs:api && cd website && npm run build"
+		"ci": "npm run lint && npm run format:check && npm run typecheck && npm run build"
 	},
 	"dependencies": {
 		"@inquirer/prompts": "^7.8.0",
@@ -49,9 +47,6 @@
 		"prettier": "^3.4.2",
 		"ts-node-dev": "^2.0.0",
 		"tsx": "^4.20.3",
-		"typedoc": "^0.28.11",
-		"typedoc-plugin-frontmatter": "^1.3.0",
-		"typedoc-plugin-markdown": "^4.8.1",
 		"typescript": "^5.6.0"
 	}
 }
