--- a/website/package.json
+++ b/website/package.json
@@ -20,6 +20,9 @@
 		"@fontsource/amaranth": "^5.2.6",
 		"@tailwindcss/vite": "^4.1.11",
 		"astro": "^5.12.8",
+		"mermaid": "^11.10.1",
+		"playwright": "^1.55.0",
+		"rehype-mermaid": "^3.0.0",
 		"tailwindcss": "^4.1.11"
 	},
 	"devDependencies": {
