--- a/website/package.json
+++ b/website/package.json
@@ -18,6 +18,7 @@
 		"@astrojs/starlight": "^0.35.2",
 		"@astrojs/starlight-tailwind": "^4.0.1",
 		"@fontsource/amaranth": "^5.2.6",
+		"@pasqal-io/starlight-client-mermaid": "^0.1.0",
 		"@tailwindcss/vite": "^4.1.11",
 		"astro": "^5.12.8",
 		"mermaid": "^11.10.1",
