--- a/package.json
+++ b/package.json
@@ -21,6 +21,21 @@
 	"author": "Yash Jawale",
 	"type": "module",
 	"main": "index.js",
+	"bin": {
+		"fabr": "index.js"
+	},
+	"files": [
+		"index.js",
+		"commands/",
+		"lib/",
+		"types/",
+		"templates.json",
+		"README.md",
+		"LICENSE"
+	],
+	"engines": {
+		"node": ">=18.0.0"
+	},
 	"scripts": {
 		"build": "tsc",
 		"start": "npm run build && node dist/index.js",
@@ -30,7 +45,13 @@
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
 		"typecheck": "tsc --noEmit",
-		"ci": "npm run lint && npm run format:check && npm run typecheck && npm run build"
+		"ci": "npm run lint && npm run format:check && npm run typecheck && npm run build",
+		"test:cli": "npm run build && node dist/index.js --help && node dist/index.js list",
+		"prepare:release": "npm run ci && npm run test:cli",
+		"release": "node scripts/release.js",
+		"release:status": "node scripts/release-status.js",
+		"version": "npm run prepare:release && git add -A",
+		"postversion": "git push && git push --tags"
 	},
 	"dependencies": {
 		"@inquirer/prompts": "^7.8.0",
@@ -44,6 +65,7 @@
 		"@types/node": "^24.1.0",
 		"eslint": "^9.17.0",
 		"eslint-config-prettier": "^10.1.8",
+		"globals": "^16.3.0",
 		"prettier": "^3.4.2",
 		"ts-node-dev": "^2.0.0",
 		"tsx": "^4.20.3",
