--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "fabr",
-	"version": "0.0.1-alpha.0",
+	"version": "0.1.0",
 	"description": "A command line utility for scaffolding new development projects ",
 	"keywords": [
 		"scaffold",
