fix: simplify changelog output in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -113,11 +113,9 @@ jobs:
       fi
 
       # Output changelog for GitHub release
-      {
-        echo 'changelog<<EOF'
-        cat CHANGELOG.md
-        echo EOF
-      } >> $GITHUB_OUTPUT
+      echo "changelog<<EOF" >> $GITHUB_OUTPUT
+      cat CHANGELOG.md >> $GITHUB_OUTPUT
+      echo "EOF" >> $GITHUB_OUTPUT
 
    - name: Prepare package for publishing
      if: steps.version.outputs.should_publish == 'true'
