--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"eslint-config-prettier": "^10.1.8",
 		"globals": "^16.3.0",
 		"prettier": "^3.4.2",
+		"semantic-release": "^24.2.7",
 		"ts-node-dev": "^2.0.0",
 		"tsx": "^4.20.3",
 		"typescript": "^5.6.0"
