Revert "Use remote templates & bump dependencies (#73)"
This reverts commit 70b43132c739a5dd5a7cff39d2912afd70e007cd.

--- a/.github/workflows/pr-target-develop.yml
+++ b/.github/workflows/pr-target-develop.yml
@@ -48,13 +48,13 @@ jobs:
               
               // Add a comment explaining the change
               const commentBody = [
-                'Thanks for contributing to fabr! 🚀',
-                '',
                 '🔄 This PR was automatically retargeted from `main` to `develop`.',
                 '',
                 'We use `develop` for all feature work. No action needed!',
                 '',
-                'If you need to target `main` (e.g. for a hotfix), close this PR and open a new one to `main` with `[HOTFIX]` in the title.'
+                'If you need to target `main` (e.g. for a hotfix), close this PR and open a new one to `main` with `[HOTFIX]` in the title.',
+                '',
+                '*[PR Target Workflow]*'
               ].join('\n');
               
               await github.rest.issues.createComment({
